--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "db:migrate": "prisma migrate deploy"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.1.0",
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "geist": "^1.3.0",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sanitize.css": "^13.0.0",
+    "sass": "^1.80.6",
     "zod": "^3.23.3"
   },
   "devDependencies": {
