--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "next dev --turbo",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
+    "format": "prettier . --write",
     "preview": "next build && next start",
     "start": "next start",
     "typecheck": "tsc --noEmit",
@@ -41,6 +42,7 @@
     "@typescript-eslint/parser": "^8.1.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.0.1",
+    "prettier": "^3.3.3",
     "prisma": "^5.14.0",
     "typescript": "^5.5.3"
   },
