--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.46.1",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tanstack/react-query": "^5.59.20",
     "geist": "^1.3.0",
     "next": "^15.0.1",
     "react": "^18.3.1",
