--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
     "sanitize.css": "^13.0.0",
     "sass": "^1.80.6",
     "zod": "^3.23.3"
