--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.1.0",
+    "@nytimes/react-prosemirror": "^0.6.2",
     "@prisma/client": "^5.22.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.46.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "geist": "^1.3.0",
     "next": "^15.0.1",
+    "prosemirror-remark": "^0.6.1",
+    "prosemirror-state": "^1.4.3",
+    "prosemirror-unified": "^0.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "remark": "^15.0.1",
